--- a/udn-info-collector/static/css/styles.css
+++ b/udn-info-collector/static/css/styles.css
@@ -27,6 +27,21 @@
 
 }
 
+/*.envexposure_textarea {*/
+/*    border: 3px solid #555;*/
+/*}*/
+
+/*.genemod_textarea {*/
+/*    border: 3px solid #555;*/
+/*}*/
+
+input[type=textarea] {
+    /*height: 35px;*/
+    /*width: 300px;*/
+    border: 2px solid #555;
+    background-color: white;
+}
+
 input[type=text] {
     height: 35px;
     width: 300px;
@@ -36,7 +51,7 @@ input[type=text] {
 
 input[type=number] {
     height: 35px;
-    width: 50px;
+    width: 80px;
     border: 2px solid #555;
     background-color: white;
 }
