--- a/udn-info-collector/static/css/styles.css
+++ b/udn-info-collector/static/css/styles.css
@@ -49,6 +49,10 @@ input[type=text] {
     background-color: white;
 }
 
+.select{
+    width: 275px;
+}
+
 input[type=number] {
     height: 35px;
     width: 80px;
